@@ -1611,6 +1611,13 @@ tr.sv-space td { display: none; }
 .mw-summary-preview {
 	margin: 0.1em 0;
 }
+
+/* "unblock" link on Special:Ipblocklist */
+p.mw-ipb-unblocklink {
+	font-size: 90%;
+	float: right;
+}
+
 /**
  * Here is some stuff that's ACTUALLY COMMON TO ALL SKINS.
  * When the day comes, it can be moved to a *real* common.css.
